--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/activity_usercenter_login_change"
-        android:layout_width="100dip"
-        android:layout_height="30dip"
+        android:layout_width="11dp"
+        android:layout_height="wrap_content"
         android:background="#ffff00"
         android:gravity="center"
         android:onClick="switchServer"
