--- a/app/src/main/res/layout/sesame_activity_setting_main.xml
+++ b/app/src/main/res/layout/sesame_activity_setting_main.xml
@@ -280,7 +280,8 @@
             <View
                 android:id="@+id/line_h5"
                 style="@style/setting_line_h"
-                android:layout_below="@id/activity_setting_layout5"/>
+                android:layout_below="@id/activity_setting_layout5"
+                android:visibility="gone"/>
 
             <RelativeLayout
                 android:id="@+id/activity_setting_layout_fee"
