--- a/app/src/main/res/layout-xhdpi/activity_manage_car.xml
+++ b/app/src/main/res/layout-xhdpi/activity_manage_car.xml
@@ -29,8 +29,8 @@
         <TextView
             android:id="@+id/manage_car_txt_carname"
             style="@style/setting_txt"
-            android:layout_toLeftOf="@id/car_crrow1"
-            android:layout_toRightOf="@id/car_title1"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
             android:clickable="true"
             android:ellipsize="marquee"
             android:focusable="true"
