--- a/app/src/main/res/layout/grid_item_carmain.xml
+++ b/app/src/main/res/layout/grid_item_carmain.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/carmain_lay_main"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp">
 
     <ImageView
         android:id="@+id/carmain_img_icon"
