1，浮窗开关bug修复 2，安防提醒上拉加载更多

--- a/app/src/main/res/layout-xhdpi/activity_car_safety.xml
+++ b/app/src/main/res/layout-xhdpi/activity_car_safety.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/layout_background"
-    android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/layout_background"
+                android:orientation="vertical">
 
     <include
         android:id="@+id/sub_head"
-        layout="@layout/sesame_head_sub_normal" />
+        layout="@layout/sesame_head_sub_normal"/>
 
-    <com.carlt.sesame.ui.pull.PullToRefreshListView
+    <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/activity_car_safety_list"
-        style="@style/public_listView" 
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:dividerHeight="10dip"
-        android:layout_marginLeft="@dimen/layout_padding"
-        android:layout_marginRight="@dimen/layout_padding"
-        android:layout_below="@id/sub_head"/>
+        android:layout_below="@id/sub_head"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="20dip"
+        android:paddingTop="10dp"
+        android:dividerHeight="10dip"/>
 
 </RelativeLayout>
