--- a/app/src/main/res/layout/menu_calendar_lay.xml
+++ b/app/src/main/res/layout/menu_calendar_lay.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/top"
-        layout="@layout/head_back"
+        layout="@layout/layout_title"
          />
 
     <LinearLayout
