--- a/app/src/main/res/layout/activity_car_manager.xml
+++ b/app/src/main/res/layout/activity_car_manager.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="10dp"
         android:background="@color/white"
         android:gravity="center_vertical"
+        android:clickable="false"
         android:orientation="horizontal">
 
         <TextView
@@ -25,12 +26,14 @@
         <TextView
             android:id="@+id/car_type_txt"
             style="@style/setting_subpage_item_content"
+            android:clickable="false"
             android:text="--"
             android:textColor="@color/text_color_gray1"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:contentDescription="@string/app_name"
             android:src="@mipmap/arrow_right" />
     </LinearLayout>
