--- a/app/src/main/res/layout/activity_remote_log.xml
+++ b/app/src/main/res/layout/activity_remote_log.xml
@@ -5,13 +5,13 @@
                 android:background="@color/layout_background"
     >
 
-    <ListView
+    <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/remotelog_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_marginTop="10dp"
         android:divider="@color/transparent"
         android:dividerHeight="0dp">
 
-    </ListView>
+    </com.carlt.doride.ui.pull.PullToRefreshListView>
 </RelativeLayout>
