--- a/app/src/main/res/layout/activity_remote_log.xml
+++ b/app/src/main/res/layout/activity_remote_log.xml
@@ -9,9 +9,12 @@
         android:id="@+id/remotelog_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginTop="10dp"
         android:divider="@color/transparent"
-        android:dividerHeight="0dp">
+        android:layout_marginTop="10dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="10dp"
+      >
 
     </com.carlt.doride.ui.pull.PullToRefreshListView>
 </RelativeLayout>
