修复大成,芝麻远程设置密码,tittle(TexView)空指针异常

--- a/app/src/main/res/layout/activity_remotepsw_reset3.xml
+++ b/app/src/main/res/layout/activity_remotepsw_reset3.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/layout_background"
     android:orientation="vertical" >
+    <include layout="@layout/head_back" />
     <TextView
         android:id="@+id/remotepsw_reset3_txt_title1"
         android:layout_width="wrap_content"
